# reth

./: Cargo.toml
.github/workflows/: lint.yml
crates/chainspec/: Cargo.toml
crates/optimism/chainspec/: Cargo.toml
crates/primitives/: Cargo.toml
crates/trie/common/src/: proofs.rs
