[package]
name = "reth-chainspec"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
alloy-chains = { workspace = true, features = ["serde", "rlp"] }
alloy-eips = { workspace = true, features = ["serde"] }
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true, features = ["rand", "rlp"] }
alloy-trie = { workspace = true }

auto_impl = { workspace = true }
derive_more = { workspace = true }
once_cell = { workspace = true }

reth-ethereum-forks = { workspace = true }
reth-network-peers = { workspace = true }
reth-optimism-forks = { workspace = true, optional = true }
reth-primitives-traits = { workspace = true }
reth-trie-common = { workspace = true }

serde_json = { workspace = true }

[dev-dependencies]
alloy-eips = { workspace = true, features = ["arbitrary"] }
alloy-genesis = { workspace = true }
alloy-rlp = { workspace = true, features = ["arrayvec"] }
alloy-trie = { workspace = true, features = ["arbitrary"] }

[features]
default = ["std"]
optimism = ["reth-optimism-forks"]
std = [
    "alloy-chains/std",
    "alloy-eips/std",
    "alloy-genesis/std",
    "alloy-primitives/std",
    "alloy-trie/std",
]
arbitrary = ["alloy-chains/arbitrary"]
test-utils = []
