[package]
name = "reth-optimism-chainspec"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "EVM chain spec implementation for optimism."

[lints]
workspace = true

[dependencies]
alloy-chains = { workspace = true }
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }

derive_more = { workspace = true }
once_cell = { workspace = true }

op-alloy-rpc-types = { workspace = true }

reth-chainspec = { workspace = true, features = ["optimism"] }
reth-ethereum-forks = { workspace = true }
reth-network-peers = { workspace = true }
reth-optimism-forks = { workspace = true }
reth-primitives-traits = { workspace = true }

serde_json = { workspace = true }

[dev-dependencies]
alloy-genesis = { workspace = true }
op-alloy-rpc-types = { workspace = true }
reth-chainspec = { workspace = true, features = ["test-utils"] }

[features]
default = ["std"]
std = []
